fix: align left

--- a/awesome-bootstrap-checkbox.scss
+++ b/awesome-bootstrap-checkbox.scss
@@ -36,7 +36,7 @@ $check-icon: $fa-var-check !default;
 
 .abc-checkbox{
   cursor: default;
-  padding-left: 20px;
+  padding-left: 4px;
 
   label{
     cursor: pointer;
@@ -166,7 +166,7 @@ $check-icon: $fa-var-check !default;
 
 .abc-radio{
   cursor: default;
-  padding-left: 20px;
+  padding-left: 4px;
 
   label{
     cursor: pointer;
